CompilerDesignIIT_tp--main/cs21b062_lab6/y.output
Terminals unused in grammar

   eol
   eof


State 26 conflicts: 4 shift/reduce
State 36 conflicts: 5 reduce/reduce


Grammar

    0 $accept: slist $end

    1 $@1: %empty

    2 slist: stmt scol $@1 slist

    3 $@2: %empty

    4 slist: error $@2 scol slist
    5      | %empty

    6 stmt: ID eql Ea
    7     | incF
    8     | incE

    9 Ea: E
   10   | add E
   11   | sub E
   12   | %empty

   13 E: T add E
   14  | T sub E
   15  | T

   16 T: T dIV F
   17  | T mul E
   18  | F

   19 F: Elem
   20  | sub Elem
   21  | obr E cbr
   22  | incF
   23  | incE

   24 incF: Inc ID
   25     | Dec ID

   26 incE: ID Inc
   27     | ID Dec

   28 Elem: NUMBER
   29     | ID
   30     | RNUM


Terminals, with rules where they appear

$end (0) 0
error (256) 4
ID (258) 6 24 25 26 27 29
NUMBER (259) 28
RNUM (260) 30
add (261) 10 13
sub (262) 11 14 20
mul (263) 17
dIV (264) 16
eql (265) 6
obr (266) 21
cbr (267) 21
scol (268) 2 4
Inc (269) 24 26
Dec (270) 25 27
eol (271)
eof (272)


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
slist (19)
    on left: 2 4 5, on right: 0 2 4
$@1 (20)
    on left: 1, on right: 2
$@2 (21)
    on left: 3, on right: 4
stmt (22)
    on left: 6 7 8, on right: 2
Ea (23)
    on left: 9 10 11 12, on right: 6
E (24)
    on left: 13 14 15, on right: 9 10 11 13 14 17 21
T (25)
    on left: 16 17 18, on right: 13 14 15 16 17
F (26)
    on left: 19 20 21 22 23, on right: 16 18
incF (27)
    on left: 24 25, on right: 7 22
incE (28)
    on left: 26 27, on right: 8 23
Elem (29)
    on left: 28 29 30, on right: 19 20


State 0

    0 $accept: . slist $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    Inc    shift, and go to state 3
    Dec    shift, and go to state 4

    $end  reduce using rule 5 (slist)

    slist  go to state 5
    stmt   go to state 6
    incF   go to state 7
    incE   go to state 8


State 1

    4 slist: error . $@2 scol slist

    $default  reduce using rule 3 ($@2)

    $@2  go to state 9


State 2

    6 stmt: ID . eql Ea
   26 incE: ID . Inc
   27     | ID . Dec

    eql  shift, and go to state 10
    Inc  shift, and go to state 11
    Dec  shift, and go to state 12


State 3

   24 incF: Inc . ID

    ID  shift, and go to state 13


State 4

   25 incF: Dec . ID

    ID  shift, and go to state 14


State 5

    0 $accept: slist . $end

    $end  shift, and go to state 15


State 6

    2 slist: stmt . scol $@1 slist

    scol  shift, and go to state 16


State 7

    7 stmt: incF .

    $default  reduce using rule 7 (stmt)


State 8

    8 stmt: incE .

    $default  reduce using rule 8 (stmt)


State 9

    4 slist: error $@2 . scol slist

    scol  shift, and go to state 17


State 10

    6 stmt: ID eql . Ea

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    add     shift, and go to state 21
    sub     shift, and go to state 22
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    $default  reduce using rule 12 (Ea)

    Ea    go to state 24
    E     go to state 25
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 11

   26 incE: ID Inc .

    $default  reduce using rule 26 (incE)


State 12

   27 incE: ID Dec .

    $default  reduce using rule 27 (incE)


State 13

   24 incF: Inc ID .

    $default  reduce using rule 24 (incF)


State 14

   25 incF: Dec ID .

    $default  reduce using rule 25 (incF)


State 15

    0 $accept: slist $end .

    $default  accept


State 16

    2 slist: stmt scol . $@1 slist

    $default  reduce using rule 1 ($@1)

    $@1  go to state 31


State 17

    4 slist: error $@2 scol . slist

    error  shift, and go to state 1
    ID     shift, and go to state 2
    Inc    shift, and go to state 3
    Dec    shift, and go to state 4

    $end  reduce using rule 5 (slist)

    slist  go to state 32
    stmt   go to state 6
    incF   go to state 7
    incE   go to state 8


State 18

   26 incE: ID . Inc
   27     | ID . Dec
   29 Elem: ID .

    Inc  shift, and go to state 11
    Dec  shift, and go to state 12

    $default  reduce using rule 29 (Elem)


State 19

   28 Elem: NUMBER .

    $default  reduce using rule 28 (Elem)


State 20

   30 Elem: RNUM .

    $default  reduce using rule 30 (Elem)


State 21

   10 Ea: add . E

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    E     go to state 34
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 22

   11 Ea: sub . E
   20 F: sub . Elem

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    E     go to state 35
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 36


State 23

   21 F: obr . E cbr

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    E     go to state 37
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 24

    6 stmt: ID eql Ea .

    $default  reduce using rule 6 (stmt)


State 25

    9 Ea: E .

    $default  reduce using rule 9 (Ea)


State 26

   13 E: T . add E
   14  | T . sub E
   15  | T .
   16 T: T . dIV F
   17  | T . mul E

    add  shift, and go to state 38
    sub  shift, and go to state 39
    mul  shift, and go to state 40
    dIV  shift, and go to state 41

    add       [reduce using rule 15 (E)]
    sub       [reduce using rule 15 (E)]
    mul       [reduce using rule 15 (E)]
    dIV       [reduce using rule 15 (E)]
    $default  reduce using rule 15 (E)


State 27

   18 T: F .

    $default  reduce using rule 18 (T)


State 28

   22 F: incF .

    $default  reduce using rule 22 (F)


State 29

   23 F: incE .

    $default  reduce using rule 23 (F)


State 30

   19 F: Elem .

    $default  reduce using rule 19 (F)


State 31

    2 slist: stmt scol $@1 . slist

    error  shift, and go to state 1
    ID     shift, and go to state 2
    Inc    shift, and go to state 3
    Dec    shift, and go to state 4

    $end  reduce using rule 5 (slist)

    slist  go to state 42
    stmt   go to state 6
    incF   go to state 7
    incE   go to state 8


State 32

    4 slist: error $@2 scol slist .

    $default  reduce using rule 4 (slist)


State 33

   20 F: sub . Elem

    ID      shift, and go to state 43
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20

    Elem  go to state 44


State 34

   10 Ea: add E .

    $default  reduce using rule 10 (Ea)


State 35

   11 Ea: sub E .

    $default  reduce using rule 11 (Ea)


State 36

   19 F: Elem .
   20  | sub Elem .

    add       reduce using rule 19 (F)
    add       [reduce using rule 20 (F)]
    sub       reduce using rule 19 (F)
    sub       [reduce using rule 20 (F)]
    mul       reduce using rule 19 (F)
    mul       [reduce using rule 20 (F)]
    dIV       reduce using rule 19 (F)
    dIV       [reduce using rule 20 (F)]
    scol      reduce using rule 19 (F)
    scol      [reduce using rule 20 (F)]
    $default  reduce using rule 19 (F)


State 37

   21 F: obr E . cbr

    cbr  shift, and go to state 45


State 38

   13 E: T add . E

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    E     go to state 46
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 39

   14 E: T sub . E

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    E     go to state 47
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 40

   17 T: T mul . E

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    E     go to state 48
    T     go to state 26
    F     go to state 27
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 41

   16 T: T dIV . F

    ID      shift, and go to state 18
    NUMBER  shift, and go to state 19
    RNUM    shift, and go to state 20
    sub     shift, and go to state 33
    obr     shift, and go to state 23
    Inc     shift, and go to state 3
    Dec     shift, and go to state 4

    F     go to state 49
    incF  go to state 28
    incE  go to state 29
    Elem  go to state 30


State 42

    2 slist: stmt scol $@1 slist .

    $default  reduce using rule 2 (slist)


State 43

   29 Elem: ID .

    $default  reduce using rule 29 (Elem)


State 44

   20 F: sub Elem .

    $default  reduce using rule 20 (F)


State 45

   21 F: obr E cbr .

    $default  reduce using rule 21 (F)


State 46

   13 E: T add E .

    $default  reduce using rule 13 (E)


State 47

   14 E: T sub E .

    $default  reduce using rule 14 (E)


State 48

   17 T: T mul E .

    $default  reduce using rule 17 (T)


State 49

   16 T: T dIV F .

    $default  reduce using rule 16 (T)
